# matrix_lib_hao

./: CMakeLists.txt  Makefile  README
inc/: CMakeLists.txt  acml.h  matrix_1d.h  matrix_2d.h  matrix_2d_bl_cpu.h  matrix_2d_bl_magma.h  matrix_2d_common_fun.h  matrix_3d.h  matrix_all.h  matrix_base.h  matrix_define.h  matrix_element_wise.h  matrix_mpi.h  pfaffian_utilities.h  use_bl_cpu.h  use_bl_magma.h
src/: CMakeLists.txt  matrix_2d_bl_cpu.cpp  matrix_2d_bl_magma.cpp  matrix_2d_blas_lapack.cpp  matrix_2d_common_fun.cpp  matrix_mpi.cpp
test/: CMakeLists.txt  matrix_2d_bl_cpu_test.cpp  matrix_2d_bl_magma_test.cpp  matrix_2d_blas_lapack_test.cpp  matrix_2d_common_fun_test.cpp  matrix_class_test.cpp  matrix_mpi_test.cpp  test_all.cpp
timing/: CMakeLists.txt  bl_cpu_magma_timing.cpp  random_fill_matrix.h  timing_all.cpp
